2003-12-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Reorder enables slightly and improve commenting.
	* configure: Regenerated.

2003-12-09  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in (fseeko, ftello): Add to AC_REPLACE_FUNCS list.
	* configure, config.h.in: Regenerated.

2003-12-08  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in (AC_SYS_LARGEFILE). Add.
	* configure, config.h.in: Regenerated.
	* NEWS: Document.

2003-12-07  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in (AC_SYS_LARGEFILE): Remove. More work is needed
	before AC_SYS_LARGEFILE will work on all platforms.
	* configure, config.h.in: Regenerated.
	* NEWS: Remove last note.

	* configure.in (AC_SYS_LARGEFILE): Add. The history file on
	Solaris boxes can grow beyond 2GB.
	* configure, config.h.in: Regenerated.
	* NEWS: Note addition of --disable-largefiles option.

2003-12-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Update to require Automake 1.7.9.

2003-12-05  Derek Price  <derek@ximbiot.com>

	* NEWS: Add since 1.12.3 section.
	* configure.in: Update for dev version 1.12.3.1.
	* configure: Regenerated.

2003-12-04  Derek Price  <derek@ximbiot.com>

	* configure.in: Update for release 1.12.3.
	* configure: Regenerated.

2003-12-03  Derek Price  <derek@ximbiot.com>

	* configure.in (--enable-case-sensitivity): Restore this option.
	Always AC_LIBOBJ(fncase) when filenames are found to be case
	insensitive.
	* configure, config.h.in: Regenerated.

2003-11-26  Derek Price  <derek@ximbiot.com>

	* configure.in (--enable-case-sensitivity): Remove this option.
	* NEWS: Note removal of case sensitivity support.

	* config.h.in, configure: Regenerated.

2003-11-26  Derek Price  <derek@ximbiot.com>

	* NEWS: Note recase tests.

2003-11-26  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new test suite functionality.

2003-11-25  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in (RSH_DFLT): Macro substitution for configured CVS_RSH.