@@ -1110,6 +1110,48 @@ dnl
 
 
 dnl
+dnl begin --enable-lock-compatibility
+dnl
+
+# Check for options requesting client and server feature. If none are
+# given and we have connect(), we want the full client & server arrangement.
+AC_ARG_ENABLE(
+  [lock-compatibility],
+  AC_HELP_STRING(
+    [--enable-lock-compatibility],
+    [Include locking code which prevents versions of CVS earlier than 1.12.4
+     directly accessing the same repositiory as this executable from ignoring
+     this executable's promotable read locks.  If only CVS versions 1.12.4 and
+     later will be accessing your repository directly (as a server or locally),
+     you can safely disable this option in return for fewer disk accesses and a
+     small speed increase.  Disabling this option when versions of CVS earlier
+     than 1,12,4 _will_ be accessing your repository, however, is *VERY* *VERY*
+     *VERY* dangerous and could result in data loss.  (enabled by default)]),,
+  [enable_lock_compatibility=yes])
+
+if test x$enable_lock_compatibility = xyes; then
+  AC_DEFINE([LOCK_COMPATIBILITY], [1],
+    [Define to include locking code which prevents versions of CVS earlier than
+     1.12.4 directly accessing the same repositiory as this executable from
+     ignoring this executable's promotable read locks.  If only CVS versions
+     1.12.4 and later will be accessing your repository directly (as a server
+     or locally), you can safely disable this option in return for fewer disk
+     accesses and a small speed increase.  Disabling this option when versions
+     of CVS earlier than 1,12,4 _will_ be accessing your repository, however,
+     is *VERY* *VERY* *VERY* dangerous and could result in data loss.
+
+     As such, by default, CVS is compiled with this code enabled.  If you are
+     sure you would like this code disabled, you can disable it by passing the
+     "--disable-lock-compatibility" option to configure or by commenting out
+     the lines below.])
+fi
+
+dnl
+dnl end --enable-lock-compatibility
+dnl
+
+
+dnl
 dnl begin --enable-rootcommit
 dnl
 
